--- a/src/manifest.json
+++ b/src/manifest.json
@@ -91,7 +91,13 @@
       "ignoreDevUnusedFiles": false,
       "ignoreUploadUnusedFiles": false
     },
-    "usingComponents": true
+    "usingComponents": true,
+    "__usePrivacyCheck__": true,
+    "permission": {
+      "scope.userLocation": {
+        "desc": "以便为您提供更好的服务"
+      }
+    }
   },
   "mp-alipay": {
     "usingComponents": true,
