fix: 添加组件懒加载配置

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -97,7 +97,8 @@
       "scope.userLocation": {
         "desc": "以便为您提供更好的服务"
       }
-    }
+    },
+    "lazyCodeLoading": "requiredComponents"
   },
   "mp-alipay": {
     "usingComponents": true,
