feat: 蓝牙首页静态

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -98,6 +98,9 @@
         "desc": "以便为您提供更好的服务"
       }
     },
+    "requiredPrivateInfos": [
+      "getLocation"
+    ],
     "lazyCodeLoading": "requiredComponents"
   },
   "mp-alipay": {
