--- a/src/manifest.json
+++ b/src/manifest.json
@@ -83,7 +83,7 @@
   },
   "quickapp": {},
   "mp-weixin": {
-    "appid": "wxfd6d1a32cce64511",
+    "appid": "wx95a37f6ff956eba6",
     "setting": {
       "urlCheck": false,
       "es6": true,
