--- a/env/.env
+++ b/env/.env
@@ -2,7 +2,7 @@ VITE_APP_TITLE = 'unibest'
 VITE_APP_PORT = 9000
 
 VITE_UNI_APPID = '__UNI__D1E5001'
-VITE_WX_APPID = 'wxfd6d1a32cce64511'
+VITE_WX_APPID = 'wx95a37f6ff956eba6'
 
 # h5部署网站的base，配置到 manifest.config.ts 里的 h5.router.base
 VITE_APP_PUBLIC_BASE=/
