--- a/env/.env
+++ b/env/.env
@@ -1,4 +1,4 @@
-VITE_APP_TITLE = 'unibest'
+VITE_APP_TITLE = '飞鸽畅行'
 VITE_APP_PORT = 9000
 
 VITE_UNI_APPID = '__UNI__D1E5001'
@@ -16,8 +16,8 @@ VITE_UPLOAD_BASEURL = 'https://ukw0y1.laf.run/upload'
 # 有些同学可能需要在微信小程序里面根据 develop、trial、release 分别设置上传地址，参考代码如下。
 # 下面的变量如果没有设置，会默认使用 VITE_SERVER_BASEURL or VITE_UPLOAD_BASEURL
 VITE_SERVER_BASEURL__WEIXIN_DEVELOP = 'http://121.89.87.166/api'
-VITE_SERVER_BASEURL__WEIXIN_TRIAL = 'https://ukw0y1.laf.run'
-VITE_SERVER_BASEURL__WEIXIN_RELEASE = 'https://ukw0y1.laf.run'
+VITE_SERVER_BASEURL__WEIXIN_TRIAL = 'http://121.89.87.166/api'
+VITE_SERVER_BASEURL__WEIXIN_RELEASE = 'http://121.89.87.166/api'
 
 VITE_UPLOAD_BASEURL__WEIXIN_DEVELOP = 'https://ukw0y1.laf.run/upload'
 VITE_UPLOAD_BASEURL__WEIXIN_TRIAL = 'https://ukw0y1.laf.run/upload'
