--- a/env/.env
+++ b/env/.env
@@ -15,7 +15,15 @@ VITE_UPLOAD_BASEURL = 'https://ukw0y1.laf.run/upload'
 
 # 有些同学可能需要在微信小程序里面根据 develop、trial、release 分别设置上传地址，参考代码如下。
 # 下面的变量如果没有设置，会默认使用 VITE_SERVER_BASEURL or VITE_UPLOAD_BASEURL
+
+# 测试环境域名
 VITE_SERVER_BASEURL__WEIXIN_DEVELOP = 'http://115.190.57.206/api'
+# 生产环境域名
+# VITE_SERVER_BASEURL__WEIXIN_DEVELOP = 'http://api.prod.feigeinfo.com/api'
+# 图片CDN地址
+# VITE_IMAGE_BASE_URL = 'http://115.190.57.206/static'
+VITE_IMAGE_BASE_URL = 'http://static.prod.feigeinfo.com/static'
+
 VITE_SERVER_BASEURL__WEIXIN_TRIAL = 'http://115.190.57.206/api'
 VITE_SERVER_BASEURL__WEIXIN_RELEASE = 'http://115.190.57.206/api'
 
