--- a/env/.env
+++ b/env/.env
@@ -17,12 +17,12 @@ VITE_UPLOAD_BASEURL = 'https://ukw0y1.laf.run/upload'
 # 下面的变量如果没有设置，会默认使用 VITE_SERVER_BASEURL or VITE_UPLOAD_BASEURL
 
 # 测试环境域名
-VITE_SERVER_BASEURL__WEIXIN_DEVELOP = 'http://115.190.57.206/api'
+# VITE_SERVER_BASEURL__WEIXIN_DEVELOP = 'http://115.190.57.206/api'
 # 生产环境域名
-# VITE_SERVER_BASEURL__WEIXIN_DEVELOP = 'http://api.prod.feigeinfo.com/api'
+VITE_SERVER_BASEURL__WEIXIN_DEVELOP = 'https://api.feigeinfo.com/api'
 # 图片CDN地址
 # VITE_IMAGE_BASE_URL = 'http://115.190.57.206/static'
-VITE_IMAGE_BASE_URL = 'http://static.prod.feigeinfo.com/static'
+VITE_IMAGE_BASE_URL = 'https://static.feigeinfo.com/static'
 
 VITE_SERVER_BASEURL__WEIXIN_TRIAL = 'http://115.190.57.206/api'
 VITE_SERVER_BASEURL__WEIXIN_RELEASE = 'http://115.190.57.206/api'
